update model version

--- a/web/index.html
+++ b/web/index.html
@@ -321,6 +321,7 @@
 <script src="/js/generated/entity/sys/CustomerServerPropertiesEditable.js"></script>
 <script src="/js/generated/entity/sys/DebitServicePutData.js"></script>
 <script src="/js/generated/entity/sys/DeleteCustomerData.js"></script>
+<script src="/js/generated/entity/sys/DisabledFeature.js"></script>
 <script src="/js/generated/entity/sys/Domain.js"></script>
 <script src="/js/generated/entity/sys/DomainInfo.js"></script>
 <script src="/js/generated/entity/sys/DomainInfoEditable.js"></script>
@@ -334,6 +335,7 @@
 <script src="/js/generated/entity/sys/Exception.js"></script>
 <script src="/js/generated/entity/sys/ExternalPropertiesReturn.js"></script>
 <script src="/js/generated/entity/sys/ExternalUserReference.js"></script>
+<script src="/js/generated/entity/sys/Feature.js"></script>
 <script src="/js/generated/entity/sys/File.js"></script>
 <script src="/js/generated/entity/sys/FileEditable.js"></script>
 <script src="/js/generated/entity/sys/Group.js"></script>
@@ -358,6 +360,7 @@
 <script src="/js/generated/entity/sys/MembershipRemoveData.js"></script>
 <script src="/js/generated/entity/sys/MigratedGroupInfoData.js"></script>
 <script src="/js/generated/entity/sys/MigrateGroupInfosData.js"></script>
+<script src="/js/generated/entity/sys/OtpChallenge.js"></script>
 <script src="/js/generated/entity/sys/OutgoingShare.js"></script>
 <script src="/js/generated/entity/sys/PaymentDataServiceGetReturn.js"></script>
 <script src="/js/generated/entity/sys/PaymentDataServicePutData.js"></script>
@@ -434,6 +437,7 @@
 <script src="/js/generated/entity/tutanota/ContactFormAccountData.js"></script>
 <script src="/js/generated/entity/tutanota/ContactFormAccountReturn.js"></script>
 <script src="/js/generated/entity/tutanota/ContactFormEncryptedStatisticsField.js"></script>
+<script src="/js/generated/entity/tutanota/ContactFormStatisticEntry.js"></script>
 <script src="/js/generated/entity/tutanota/ContactFormStatisticField.js"></script>
 <script src="/js/generated/entity/tutanota/ContactFormUserData.js"></script>
 <script src="/js/generated/entity/tutanota/ContactList.js"></script>
@@ -456,6 +460,7 @@
 <script src="/js/generated/entity/tutanota/CustomerAccountCreateData.js"></script>
 <script src="/js/generated/entity/tutanota/CustomerContactFormGroupRoot.js"></script>
 <script src="/js/generated/entity/tutanota/DataBlock.js"></script>
+<script src="/js/generated/entity/tutanota/DeleteContactFormConversationIndex.js"></script>
 <script src="/js/generated/entity/tutanota/DeleteFileData.js"></script>
 <script src="/js/generated/entity/tutanota/DeleteGroupData.js"></script>
 <script src="/js/generated/entity/tutanota/DeleteMailData.js"></script>
@@ -519,6 +524,7 @@
 <script src="/js/generated/entity/tutanota/SendMailReturn.js"></script>
 <script src="/js/generated/entity/tutanota/SendUnsecureMailData.js"></script>
 <script src="/js/generated/entity/tutanota/SendUnsecureMailReturn.js"></script>
+<script src="/js/generated/entity/tutanota/StatisticLogEntry.js"></script>
 <script src="/js/generated/entity/tutanota/Subfiles.js"></script>
 <script src="/js/generated/entity/tutanota/TutanotaProperties.js"></script>
 <script src="/js/generated/entity/tutanota/TutanotaPropertiesEditable.js"></script>
